# content-pilot

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  install.sh  pyproject.toml
config/: default.toml  example.toml
src/content_pilot/: __init__.py  __main__.py  app.py  cli.py  constants.py
src/content_pilot/analytics/: __init__.py  collector.py
src/content_pilot/browser/: __init__.py  manager.py
src/content_pilot/config/: __init__.py  settings.py
src/content_pilot/content/: __init__.py  card_generator.py  card_templates.py  generator.py  templates.py
src/content_pilot/content/prompts/: xiaohongshu.toml
src/content_pilot/database/: __init__.py  engine.py
src/content_pilot/gui/: __init__.py  constants.py  main.py
src/content_pilot/gui/components/: __init__.py  account_card.py  image_lightbox.py  image_picker.py  nav.py  post_card.py  stat_card.py
src/content_pilot/gui/i18n/: __init__.py  en_US.py  translations.py  zh_CN.py
src/content_pilot/gui/pages/: accounts.py  (+5 more)
src/content_pilot/safety/: __init__.py  rate_limiter.py  validator.py
src/content_pilot/scheduler/: __init__.py  engine.py
src/content_pilot/utils/: files.py  humanize.py  log.py  qr.py  retry.py
tests/integration/: conftest.py  test_content_flow.py  test_publish_flow.py  test_scheduler_flow.py
tests/unit/: test_analytics.py  test_app.py  test_browser_manager.py  test_card_generator.py  test_config.py  test_database.py  test_generator.py  test_gui_app.py  test_rate_limiter.py  test_scheduler.py  test_templates.py  test_validator.py
